--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,9 @@ main{
     height: 100%;
     background-color: #f2f2f2;
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content:  flex-start;
     margin: 1rem;
     border: 1px solid black;
 
@@ -35,12 +36,76 @@ main{
 
 
  .header-container{
-    height: 12.5rem;
-    width: 100%;
+    height: 2rem;
+    width: calc(100% - 1rem);
     border: 1px solid black;
     margin: 1rem;
+    display: flex;
+    align-items: center;
+
+    gap: 1rem;
+    padding: 1rem;
 
  } 
+
+ .left-block,  .right-block,  .center-block{
+    height: 1rem;
+    width: 20%;
+    border: 1px solid black;
+ }
+
+ .center-block{
+    width: 60%;
+ }
+
+ h2{
+    text-align: center;
+ }
+
+
+
+
+ .body-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+ }
+
+ .avatar{
+    margin-top: 1rem;
+    max-width: 100px;
+    width: 100%;
+    height: 100px;
+    border-radius: 100%;
+    border: 1px solid black;
+    margin-bottom: 1rem;
+ }
+
+ .p-body{
+    max-width: 450px;
+    text-align: center;
+    font-size: 0.8rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+ }
+
+.article-container{
+
+        height: 2rem;
+        width: calc(100% - 1rem);
+        border: 1px solid black;
+        margin: 1rem;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        padding: 1rem;
+    
+}
+ 
+
+
 
 
 
