--- a/styles.css
+++ b/styles.css
@@ -11,26 +11,37 @@ html{
 
 main{
 
+    display: flex;
+    flex-direction: column;
     height: 100vh;
+    align-items: center;
+
 }
 
 
+
+h1{
+    text-align: center;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
 
 
 
 
 .main-container {
     max-width: 50rem;
-    max-height: 31.25rem;
-    width: auto;
-    height: 100%;
+    max-height: 60rem;
+    width: calc(100% - 2rem);;
+    height: auto;
     background-color: #f2f2f2;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:  flex-start;
-    margin: 1rem;
     border: 1px solid black;
+    margin-bottom: 2rem;
+    border-radius: 8px;
 
   }
 
@@ -42,9 +53,9 @@ main{
     margin: 1rem;
     display: flex;
     align-items: center;
-
     gap: 1rem;
     padding: 1rem;
+    border-radius: 6px;
 
  } 
 
@@ -52,6 +63,7 @@ main{
     height: 1rem;
     width: 20%;
     border: 1px solid black;
+    border-radius: 4px;
  }
 
  .center-block{
@@ -93,50 +105,56 @@ main{
 
 .article-container{
 
-        height: 2rem;
+        height: auto;
         width: calc(100% - 1rem);
-        border: 1px solid black;
-        margin: 1rem;
+        max-width: 500px;
+        margin-top: 1rem;
         display: flex;
         align-items: center;
         gap: 1rem;
-        padding: 1rem;
+        margin-bottom: 2rem;
+        
     
 }
- 
+
+.article{
+    display: flex;
+    flex-direction: column;
+    font-size: 0.8rem;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    max-width: 150px;
+}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .cuadro-contenedor {
-    max-width: 800px;
-    max-height: 500px;
-    margin-left: 1rem;
-    margin-right: 1rem;
-
-  }
-  
-
-.cuadro{
+.article div{
     width: 100%;
-    height: 500px;
+    height: 50px;
+    border: 1px solid black;
+    margin-bottom: 1rem;
+    border-radius: 6px;
+}
 
-    background-color: #f2f2f2;
-  }
-   */
+button{
+    width: 150px;
+    height: 50px;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
