--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -7,6 +9,8 @@
 html{
     font-size: 16px;
     background-color: bisque;
+    font-family: 'Cabin', sans-serif;
+
 }
 
 main{
@@ -15,7 +19,7 @@ main{
     flex-direction: column;
     height: 100vh;
     align-items: center;
-
+ 
 }
 
 
@@ -24,6 +28,7 @@ h1{
     text-align: center;
     margin-bottom: 2rem;
     margin-top: 2rem;
+    
 }
 
 
@@ -72,6 +77,7 @@ h1{
 
  h2{
     text-align: center;
+    font-weight: normal;
  }
 
 
@@ -141,6 +147,7 @@ button{
     height: 50px;
     border-radius: 1rem;
     font-size: 1.5rem;
+    border: 1px solid black;
 }
 
 
