--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@
     padding: 0;
 }
 
+:root {
+
+    --whiteC: #d9d5d5;
+    --bgSearchbar: #000000;
+    --navBarItems:  #000000;
+  }
+
 html{
     font-size: 16px;
     background-color: bisque;
@@ -17,8 +24,9 @@ main{
 
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
     align-items: center;
+    
  
 }
 
@@ -44,7 +52,7 @@ h1{
     flex-direction: column;
     align-items: center;
     justify-content:  flex-start;
-    border: 1px solid black;
+    border: 1px solid var(--whiteC);
     margin-bottom: 2rem;
     border-radius: 8px;
 
@@ -54,7 +62,7 @@ h1{
  .header-container{
     height: 2rem;
     width: calc(100% - 1rem);
-    border: 1px solid black;
+    border: 1px solid var(--whiteC);
     margin: 1rem;
     display: flex;
     align-items: center;
@@ -67,12 +75,14 @@ h1{
  .left-block,  .right-block,  .center-block{
     height: 1rem;
     width: 20%;
-    border: 1px solid black;
+    border: 1px solid var(--whiteC);
     border-radius: 4px;
+    background-color: var(--navBarItems);
  }
 
  .center-block{
     width: 60%;
+    background-color: var(--navBarItems);
  }
 
  h2{
@@ -97,7 +107,7 @@ h1{
     width: 100%;
     height: 100px;
     border-radius: 100%;
-    border: 1px solid black;
+    border: 1px solid var(--whiteC);
     margin-bottom: 1rem;
  }
 
@@ -137,7 +147,7 @@ h1{
 .article div{
     width: 100%;
     height: 50px;
-    border: 1px solid black;
+    border: 1px solid var(--whiteC);
     margin-bottom: 1rem;
     border-radius: 6px;
 }
@@ -152,7 +162,12 @@ button{
 
 
 
+footer{
+    
+    margin-top: 3rem;
+    text-align: center;
 
+}
 
 
 
