--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,9 @@
 :root {
 
     --whiteC: #d9d5d5;
-    --bgSearchbar: #000000;
-    --navBarItems:  #000000;
+    --color60: #000000;
+    --color30:  #d4d3d3;
+    --color10: #000000;
   }
 
 html{
@@ -26,6 +27,7 @@ main{
     flex-direction: column;
     min-height: 100vh;
     align-items: center;
+    background-color: #1c1b1b;
     
  
 }
@@ -36,6 +38,7 @@ h1{
     text-align: center;
     margin-bottom: 2rem;
     margin-top: 2rem;
+    color: #f2f2f2;
     
 }
 
@@ -55,6 +58,8 @@ h1{
     border: 1px solid var(--whiteC);
     margin-bottom: 2rem;
     border-radius: 8px;
+    background-color: var(--color60);
+    color: var(--color30);
 
   }
 
@@ -69,6 +74,7 @@ h1{
     gap: 1rem;
     padding: 1rem;
     border-radius: 6px;
+    background-color: var(--color10);
 
  } 
 
@@ -77,12 +83,12 @@ h1{
     width: 20%;
     border: 1px solid var(--whiteC);
     border-radius: 4px;
-    background-color: var(--navBarItems);
+    background-color: var(--color60);
  }
 
  .center-block{
     width: 60%;
-    background-color: var(--navBarItems);
+    
  }
 
  h2{
@@ -109,6 +115,8 @@ h1{
     border-radius: 100%;
     border: 1px solid var(--whiteC);
     margin-bottom: 1rem;
+    background-color: var(--color10);
+
  }
 
  .p-body{
@@ -150,6 +158,8 @@ h1{
     border: 1px solid var(--whiteC);
     margin-bottom: 1rem;
     border-radius: 6px;
+    background-color: var(--color10);
+
 }
 
 button{
@@ -158,6 +168,8 @@ button{
     border-radius: 1rem;
     font-size: 1.5rem;
     border: 1px solid black;
+    background-color: #480f46;
+    color: #f2f2f2;
 }
 
 
@@ -166,6 +178,7 @@ footer{
     
     margin-top: 3rem;
     text-align: center;
+    color: #f2f2f2;
 
 }
 
