--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,7 @@ button{
     border: 1px solid black;
     background-color: #480f46;
     color: #f2f2f2;
+    border: 2px solid var(--whiteC);
 }
 
 
@@ -191,8 +192,13 @@ footer{
     color: #f2f2f2;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 1rem;
     align-items: center;
 }
 
+
+#colorValues div{
+    border: 2px solid var(--whiteC);
+    border-radius: 8px;
+}
 
