--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,14 @@ h1{
     
 }
 
+.text{
+    color: #f2f2f2;
+    max-width: 700px;
+    margin: 1rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
 
 
 
