--- a/styles.css
+++ b/styles.css
@@ -42,12 +42,23 @@ h1{
     
 }
 
-.text{
+.text, .text2{
     color: #f2f2f2;
     max-width: 700px;
-    margin: 1rem;
+    margin: 1rem 1rem 0rem 1rem;
     text-align: center;
+    font-size: 20px;
+}
+
+span{
+    color: #b15caf;
+    font-weight: bold;
+    
+}
+
+.text2{
     margin-bottom: 2rem;
+    font-size: 20px;
 }
 
 
