--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,7 @@ footer{
     margin-top: 3rem;
     text-align: center;
     color: #f2f2f2;
+    margin-bottom: 1rem;
 
 }
 
@@ -221,3 +222,11 @@ footer{
     border-radius: 8px;
 }
 
+
+.social-container{
+    display: flex;
+    gap: 32px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+}
